--- a/themes/zalepik/layouts/partials/head.html
+++ b/themes/zalepik/layouts/partials/head.html
@@ -1,9 +1,9 @@
 <!-- ... -->
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link href="/css/tailwind/tailwind.css" rel="stylesheet">
-<link href="/css/tailwind/custom.css" rel="stylesheet">
-<link href="/css/tailwind/tailwind_sm.css" rel="stylesheet">
+<link href="{{ .Site.BaseURL }}/css/tailwind/tailwind.css" rel="stylesheet">
+<link href="{{ .Site.BaseURL }}/css/tailwind/tailwind_sm.css" rel="stylesheet">
+<link href="{{ .Site.BaseURL }}/css/tailwind/custom.css" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <!-- Add the slick-theme.css if you want default styling -->
 <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
@@ -30,8 +30,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 {{ if or (.Params.zartikel) (.Params.zvideo) }}
     <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    {{/*  <link href="/css/rainbow.css" rel="stylesheet" type="text/css">  */}}
-    <link href="/css/paraiso-dark.css" rel="stylesheet" type="text/css">
+    {{/*  <link href="{{ .Site.BaseURL }}/css/rainbow.css" rel="stylesheet" type="text/css">  */}}
+    <link href="{{ .Site.BaseURL }}/css/paraiso-dark.css" rel="stylesheet" type="text/css">
 {{ end }}
 <style>
     /*  @media only screen and (max-width: 640px) {
@@ -61,7 +61,7 @@
 {{ template "_internal/opengraph.html" . }}
 
 {{ if .IsHome }}
-    <link rel="stylesheet" type="text/css" href="/css/slick-1.8.1/slick/slick.css">
-    <link rel="stylesheet" type="text/css" href="/css/slick-1.8.1/slick/slick-theme.css">
-    <link rel="stylesheet" type="text/css" href="/css/slider/slider_styling.css">
+    <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}/css/slick-1.8.1/slick/slick.css">
+    <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}/css/slick-1.8.1/slick/slick-theme.css">
+    <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}/css/slider/slider_styling.css">
 {{ end }}
